--- a/list of product/index.html
+++ b/list of product/index.html
@@ -82,7 +82,7 @@
        
         <!--=====================================================products============== -->
         <div class="container">
-            <div id="demo" class="row></div>
+            <div id="demo" class="row"></div>
         </div>
         <script>
             let product = [
