--- a/list of product/index.html
+++ b/list of product/index.html
@@ -125,7 +125,7 @@
             
                
                     <div class="col-3 g-4 rounded-3 " >
-                        <div class="card shadow-lg">
+                        <div class="card shadow-lg h-100">
                               <img src=${product[i].image} class="card-img-top  " alt="..." />
                             <div class="card-body">
                               <h5 class="card-title">${product[i].type}</h5>
