--- a/calculate BMI/index.html
+++ b/calculate BMI/index.html
@@ -98,10 +98,7 @@
                     result.innerHTML = `you are normal and healthy
                     <img src="img/download2.jpeg" alt=""> `;
                     result.style.color = "green";
-                } else if (BMI >= 30) {
-                    document.getElementById(
-                        "result"
-                    ).innerHTML = `you are fat    <br>    <img src="img/download3.jpeg" alt=""> `;
+                } else if (BMI >= 30) {  result.innerHTML = `you are fat    <br>    <img src="img/download3.jpeg" alt=""> `;
                     result.style.color = "red";
                 }
             }
